--- a/Example/TDSemiModal.xcodeproj/xcshareddata/xcschemes/TDSemiModal.xcscheme
+++ b/Example/TDSemiModal.xcodeproj/xcshareddata/xcschemes/TDSemiModal.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0440"
+   LastUpgradeVersion = "0600"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,6 +17,20 @@
                BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
                BuildableName = "TDSemiModal.app"
                BlueprintName = "TDSemiModal"
+               ReferencedContainer = "container:TDSemiModal.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CCDC2D7919C9D249008B2164"
+               BuildableName = "TDSemiModalTests.xctest"
+               BlueprintName = "TDSemiModalTests"
                ReferencedContainer = "container:TDSemiModal.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
